Trying things out on a seperate branch for deployment

--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -109,7 +109,7 @@
               <a href="users/order-now.html">
                 <button class="btn btn-primary">Order Now</button>
               </a>
-              <button class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
+              <button onclick="toggleModal" class="triggerModal btn btn-blue" data-target="cartModal5">Add to Cart</button>
 
               <div class="modal" id='cartModal5'>
                 <div class="modal-content">
