--- a/UI/signup.html
+++ b/UI/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
 </head>
+
 <body>
 
     <div class="container hero-full">
@@ -17,35 +19,47 @@
                 <p>It only takes a few seconds to signup, Lets get started!</p>
                 <form class="form-data contain">
                     <div class="form-member text-left">
-                        <label for="">Username</label>
-                        <input type="text" name="username" class="form-input" placeholder="Choose a Username " required>
+                        <label for="">Email</label>
+                        <input type="email" name="email" class="form-input email" placeholder="Enter Your Email"
+                            requiredX>
                     </div>
                     <div class="form-member text-left">
-                        <label for="">Email</label>
-                        <input type="email" name="email" class="form-input" placeholder="Enter Your Email " required>
+                        <label for="">Password</label>
+                        <input type="password" name="password" class="form-input password" placeholder="Choose a Password"
+                            requiredX>
+                    </div>
+                    <div class="form-member text-left">
+                        <label for="">Confirm Password</label>
+                        <input type="password" name="password_confirm" class="form-input password_confirm" placeholder="Choose a Password"
+                            requiredX>
                     </div>
                     <div class="form-member text-left">
                         <label for="">Fullname</label>
-                        <input type="text" name="fullname" class="form-input" placeholder="Enter Your Full Name" required>
+                        <input type="text" name="fullname" class="form-input fullname" placeholder="Enter Your Full Name"
+                            requiredX>
                     </div>
                     <div class="form-member text-left">
                         <label for="">Mobile</label>
-                        <input type="tel" name="mobile" class="form-input" placeholder="Enter Your Mobile" required>
+                        <input type="tel" name="mobile" class="form-input mobile" placeholder="Enter Your Mobile"
+                            requiredX>
                     </div>
                     <div class="form-member text-left">
                         <label for="">Address</label>
-                        <input type="text" name="address" class="form-input" placeholder="Enter Your Home Address" required>
+                        <input type="text" name="address" class="form-input address" placeholder="Enter Your Home Address"
+                            requiredX>
                     </div>
                     <div class="form-member">
-                        <button name="signup" class="btn btn-blue btn-block">Signup</button>
+                        <p class="text-red" id="response-area"></p>
+                        <button name="signup" class="btn btn-blue btn-block signup-btn">Signup</button>
                     </div>
                     <p>Already have an account? <a href="signin.html" class="link">Signin Instead</a></p>
                 </form>
-                <p>Go back home <a href="index.html" class="link">Home</a></p> 
-            </div>       
+                <p>Go back home <a href="index.html" class="link">Home</a></p>
+            </div>
         </div>
 
     </div>
-    
+    <script src='./assets/js/signupCtrl.js'></script>
 </body>
+
 </html>
