Update the html files to use toggler functions
- Refactor the responsive nav file for code mentainability

--- a/UI/index.html
+++ b/UI/index.html
@@ -26,20 +26,23 @@
                 <a class="btn btn-green" href="users/my-cart.html">My Cart
                     <span class="count">98</span>
                 </a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
 
-    <main class="main-content">
+    <main class="
+                    main-content">
         <div class="hero">
             <div class="contain text-center">
                 <h1 class="">Welcome To Fast Food Fast</h1>
-                <p>The best food ordering app. Order afordable food items, drinks, pastries and African dishes to your door
+                <p>The best food ordering app. Order afordable food items, drinks, pastries and African
+                    dishes to your door
                     step instantly!</p>
                 <form class="form-data" method="GET">
                     <div class="form-member">
-                        <input type="text" name="search" class="form-input transparent text-center hero-input" placeholder="Search foods and dishes">
+                        <input type="text" name="search" class="form-input transparent text-center hero-input"
+                            placeholder="Search foods and dishes">
                         <a>
                             <button name="search" class="btn btn-primary">Search Food</button>
                         </a>
@@ -74,7 +77,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv
+                                    svewvfd ewfsfev fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -95,8 +99,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd
+                                                    ewfsfev fvdcvev vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd
+                                                    ewfsfev fvdcvev vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -105,7 +111,8 @@
                                                 <div class="form-member text-left">
                                                     <input type="number" class="form-input" placeholder="Enter Desired Quantity example 3">
                                                 </div>
-                                                <button class="btn btn-blue btn-block btn-rounded btn-bg">Add To Cart</button>
+                                                <button class="btn btn-blue btn-block btn-rounded btn-bg">Add
+                                                    To Cart</button>
                                             </div>
                                         </form>
                                         <button class="close-button btn btn-primary btn-block btn-rounded btn-bg">Cancel</button>
@@ -127,7 +134,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv
+                                    svewvfd ewfsfev fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -148,8 +156,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd
+                                                    ewfsfev fvdcvev vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd
+                                                    ewfsfev fvdcvev vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -158,7 +168,8 @@
                                                 <div class="form-member text-left">
                                                     <input type="number" class="form-input" placeholder="Enter Desired Quantity example 3">
                                                 </div>
-                                                <button class="btn btn-blue btn-block btn-rounded btn-bg">Add To Cart</button>
+                                                <button class="btn btn-blue btn-block btn-rounded btn-bg">Add
+                                                    To Cart</button>
                                             </div>
                                         </form>
                                         <button class="close-button btn btn-primary btn-block btn-rounded btn-bg">Cancel</button>
@@ -180,7 +191,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv
+                                    svewvfd ewfsfev fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -204,7 +216,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv
+                                    svewvfd ewfsfev fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -228,7 +241,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv
+                                    svewvfd ewfsfev fvdcvev vre</div>
                                 <span class="item-description link">Food Details</span>
                             </div>
                         </div>
@@ -261,17 +275,26 @@
             <section class="flex-h text-center">
                 <div class="flex-item card" id="about">
                     <h2>About Fast Food Fast</h2>
-                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet consectetur
+                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+                        in sequi incidunt tempora! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem
+                        ipsum dolor sit
+                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum
+                        dolor sit amet consectetur
                         adipisicing elit. Totam in sequi incidunt tempora!</p>
-                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet consectetur
+                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+                        in sequi incidunt tempora! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem
+                        ipsum dolor sit
+                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum
+                        dolor sit amet consectetur
                         adipisicing elit. Totam in sequi incidunt tempora!</p>
-                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit
-                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum dolor sit amet consectetur
+                    <p class="text-simple">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+                        in sequi incidunt tempora! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem
+                        ipsum dolor sit
+                        amet consectetur adipisicing elit. Totam in sequi incidunt tempora!Lorem ipsum
+                        dolor sit amet consectetur
                         adipisicing elit. Totam in sequi incidunt tempora!</p>
                 </div>
                 <div class="flex-item card" id="contact">
