--- a/UI/admins/all-orders.html
+++ b/UI/admins/all-orders.html
@@ -32,12 +32,13 @@
                 </div>
                 <a href="my-profile.html" class="">My Profile</a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
 
-    <main class="main-content">
+    <main class="
+                    main-content">
 
         <div class="container">
 
@@ -93,7 +94,8 @@
                                                     </div>
                                                     <form action="javascript:;" method="POST" class=" card card-shadow">
                                                         <div class="">
-                                                            <h2>Accepting this order, processes all items in the order.
+                                                            <h2>Accepting this order, processes all items
+                                                                in the order.
                                                                 Are you sure you want to accept this users
                                                                 order?</h2>
                                                             <button class="btn btn-green btn-rounded btn-bg">Accept</button>
@@ -117,7 +119,8 @@
                                                     </div>
                                                     <form action="javascript:;" method="POST" class=" card card-shadow">
                                                         <div class="">
-                                                            <h2>Rejecting this order cancels all items within this
+                                                            <h2>Rejecting this order cancels all items
+                                                                within this
                                                                 order. Are you sure
                                                                 you want to reject this users order?</h2>
                                                             <button class="btn btn-red btn-rounded btn-bg">Reject</button>
@@ -140,9 +143,12 @@
                                                     </div>
                                                     <form action="javascript:;" method="POST" class=" card card-shadow">
                                                         <div class="">
-                                                            <h2>Marking this order as complete accepts all the
-                                                                items in the order and updates its delivery status to
-                                                                completed, Are you sure you want to proceed?</h2>
+                                                            <h2>Marking this order as complete accepts all
+                                                                the
+                                                                items in the order and updates its delivery
+                                                                status to
+                                                                completed, Are you sure you want to
+                                                                proceed?</h2>
                                                             <button class="btn btn-green btn-rounded btn-bg">Proceed</button>
                                                             <button class="close-button btn btn-primary btn-rounded btn-bg">Cancel</button>
                                                         </div>
