--- a/UI/admins/completed-orders.html
+++ b/UI/admins/completed-orders.html
@@ -32,12 +32,13 @@
                 </div>
                 <a href="my-profile.html" class="">My Profile</a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
 
-    <main class="main-content">
+    <main class="
+                    main-content">
 
         <div class="container">
 
