--- a/UI/admins/create-food.html
+++ b/UI/admins/create-food.html
@@ -40,12 +40,13 @@
                 </div>
                 <a href="my-profile.html" class="">My Profile</a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
 
-    <main class="main-content">
+    <main class="
+                    main-content">
 
         <div class="container">
 
@@ -65,7 +66,8 @@
                             </div>
                             <div class="form-member text-left">
                                 <label for="">Food Price</label>
-                                <input type="number" class="form-input" placeholder="Enter Food Price" value="" required>
+                                <input type="number" class="form-input" placeholder="Enter Food Price" value=""
+                                    required>
                             </div>
                             <div class="form-member text-left">
                                 <label for="">Food Image</label>
