--- a/UI/admins/delete-food.html
+++ b/UI/admins/delete-food.html
@@ -31,7 +31,7 @@
             </div>
             <a href="my-profile.html" class="">My Profile</a>
             <a href="../logout.html" class="btn-rounded">Logout</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="javascript:void(0);" class="icon">&#9776;</a>
         </nav>
     </header>
 
