--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -24,7 +24,7 @@
         <a class="btn btn-green" href="users/my-cart.html">My Cart
           <span class="count">98</span>
         </a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" class="icon">&#9776;</a>
       </div>
     </nav>
   </header>
