--- a/UI/users/foods.html
+++ b/UI/users/foods.html
@@ -34,12 +34,13 @@
           <span class="count">98</span>
         </a>
         <a href="../logout.html" class="btn-rounded">Logout</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+        <a href="javascript:void(0);" class="icon">&#9776;</a>
       </div>
     </nav>
   </header>
 
-  <main class="main-content">
+  <main class="
+          main-content">
 
     <div class="container">
       <h1 class="text-center">Whats On Our Menu</h1>
