--- a/UI/users/pending-orders.html
+++ b/UI/users/pending-orders.html
@@ -34,7 +34,7 @@
                     <span class="count">98</span>
                 </a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
