Refactor front end Javascript
- Update response-nav.js name to main.js
- Use event bubling and append listeners to the window element for efficiency
- Update the menu button js and remove the onclick myFunction from all html pages

[FINISHES #161240053]

--- a/UI/users/foods.html
+++ b/UI/users/foods.html
@@ -34,7 +34,7 @@
                     <span class="count">98</span>
                 </a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
@@ -59,7 +59,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -80,8 +81,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -111,7 +114,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -132,8 +136,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -164,7 +170,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -185,8 +192,10 @@
                                                 <span class="badge price">&#8358; X3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -195,7 +204,8 @@
                                                 <div class="form-member text-left">
                                                     <input type="number" class="form-input" placeholder="Enter Desired Quantity example 3">
                                                 </div>
-                                                <button class="close-button btn btn-blue btn-block btn-rounded btn-bg">Add To Cart</button>
+                                                <button class="close-button btn btn-blue btn-block btn-rounded btn-bg">Add
+                                                    To Cart</button>
                                             </div>
                                         </form>
                                         <button class="close-button btn btn-primary btn-block btn-rounded btn-bg">Cancel</button>
@@ -218,7 +228,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -239,8 +250,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -282,7 +295,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Baked Food Items</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -301,8 +315,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -334,7 +350,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Baked Food Items</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -355,8 +372,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -388,7 +407,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Baked Food Items</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -409,8 +429,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -452,7 +474,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Wine and Drinks</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -473,8 +496,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -506,7 +531,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Wine and Drinks</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -527,8 +553,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -560,7 +588,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Wine and Drinks</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -581,8 +610,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form action="javascript:;" method="POST" class=" card card-shadow">
@@ -616,7 +647,7 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="../assets/js/responsive-nav.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
