--- a/UI/admins/create-food.html
+++ b/UI/admins/create-food.html
@@ -40,7 +40,7 @@
                 </div>
                 <a href="my-profile.html" class="">My Profile</a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
@@ -65,7 +65,8 @@
                             </div>
                             <div class="form-member text-left">
                                 <label for="">Food Price</label>
-                                <input type="number" class="form-input" placeholder="Enter Food Price" value="" required>
+                                <input type="number" class="form-input" placeholder="Enter Food Price" value=""
+                                    required>
                             </div>
                             <div class="form-member text-left">
                                 <label for="">Food Image</label>
@@ -95,7 +96,7 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="../assets/js/responsive-nav.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
