--- a/UI/admins/delete-food.html
+++ b/UI/admins/delete-food.html
@@ -31,7 +31,7 @@
             </div>
             <a href="my-profile.html" class="">My Profile</a>
             <a href="../logout.html" class="btn-rounded">Logout</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="javascript:void(0);" class="icon">&#9776;</a>
         </nav>
     </header>
 
@@ -93,7 +93,7 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="../assets/js/responsive-nav.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
