--- a/UI/foods-menu.html
+++ b/UI/foods-menu.html
@@ -24,7 +24,7 @@
                 <a class="btn btn-green" href="users/my-cart.html">My Cart
                     <span class="count">98</span>
                 </a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
@@ -49,7 +49,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -70,8 +71,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -101,7 +104,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -122,8 +126,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -154,7 +160,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -175,8 +182,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -208,7 +217,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Cooked Foods</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -229,8 +239,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -272,7 +284,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Baked Food Items</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -291,8 +304,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -324,7 +339,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Baked Food Items</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -345,8 +361,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -378,7 +396,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Baked Food Items</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -399,8 +418,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -442,7 +463,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Wine and Drinks</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -463,8 +485,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -496,7 +520,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Wine and Drinks</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -517,8 +542,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -550,7 +577,8 @@
                                 <div class="item-subtitle">
                                     <a href="">Wine and Drinks</a>
                                 </div>
-                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre</div>
+                                <div class="item-description">qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev
+                                    fvdcvev vre</div>
                                 <span class="item-description link">More Details</span>
                             </div>
                         </div>
@@ -571,8 +599,10 @@
                                                 <span class="badge price">&#8358;3,500</span>
                                             </div>
                                             <div class="item-description">
-                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vre asc
-                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev vres</p>
+                                                <p>qwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vre asc
+                                                    eqwewdsc asdfefedv ewdscvev dsfedv ewdvewv svewvfd ewfsfev fvdcvev
+                                                    vres</p>
                                             </div>
                                         </div>
                                         <form method="POST" class="xform-data xfood-item card card-shadow">
@@ -606,7 +636,7 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="assets/js/responsive-nav.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
