--- a/UI/users/my-cart.html
+++ b/UI/users/my-cart.html
@@ -35,7 +35,7 @@
                     <span class="count">98</span>
                 </a>
                 <a href="../logout.html" class="btn-rounded">Logout</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+                <a href="javascript:void(0);" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
@@ -206,7 +206,7 @@
         <div class="footer text-center">Fast Food Fast. &copy; All Rights Reserved</div>
     </footer>
 
-    <script src="../assets/js/responsive-nav.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
