--- a/UI/signup.html
+++ b/UI/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,9 @@
     <title>Fast-Food-Fast | Signup</title>
     <!-- stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/vendor/font-awesome/css/font-awesome.min.css" />
 </head>
+
 <body>
 
     <div class="container hero-full">
@@ -15,37 +18,55 @@
             <div class="card card-shadow text-inverse">
                 <h2>Create An Account To Get Started</h2>
                 <p>It only takes a few seconds to signup, Lets get started!</p>
-                <form class="form-data contain">
-                    <div class="form-member text-left">
-                        <label for="">Username</label>
-                        <input type="text" name="username" class="form-input" placeholder="Choose a Username " required>
-                    </div>
+                <form class="form-data contain" action="javascript:;">
                     <div class="form-member text-left">
                         <label for="">Email</label>
-                        <input type="email" name="email" class="form-input" placeholder="Enter Your Email " required>
+                        <input type="email" name="email" class="form-input email" placeholder="Enter Your Email "
+                            requiredX>
+                    </div>
+                    <div class="form-member text-left">
+                        <label for="">Password</label>
+                        <input type="password" name="password" class="form-input password" placeholder="Enter your password"
+                            requiredX>
+                    </div>
+                    <div class="form-member text-left">
+                        <label for="">Repeat Password</label>
+                        <input type="password" name="passwordConfirmation" class="form-input passwordConfirmation"
+                            placeholder="Repeat your password" requiredX>
                     </div>
                     <div class="form-member text-left">
                         <label for="">Fullname</label>
-                        <input type="text" name="fullname" class="form-input" placeholder="Enter Your Full Name" required>
+                        <input type="text" name="fullname" class="form-input fullname" placeholder="Enter Your Full Name"
+                            requiredX>
                     </div>
                     <div class="form-member text-left">
                         <label for="">Mobile</label>
-                        <input type="tel" name="mobile" class="form-input" placeholder="Enter Your Mobile" required>
+                        <input type="tel" name="mobile" class="form-input mobile" placeholder="Enter Your Mobile"
+                            requiredX>
                     </div>
                     <div class="form-member text-left">
                         <label for="">Address</label>
-                        <input type="text" name="address" class="form-input" placeholder="Enter Your Home Address" required>
+                        <input type="text" name="address" class="form-input address" placeholder="Enter Your Home Address"
+                            requiredX>
                     </div>
                     <div class="form-member">
-                        <button name="signup" class="btn btn-blue btn-block">Signup</button>
+                        <div class="response-area">
+                        </div>
+                        <div class="hide loader">
+                            <i class="fa fa-spinner fa-spin"></i>
+                        </div>
+                        <button name="signup" class="btn btn-blue btn-block signup">Signup</button>
                     </div>
                     <p>Already have an account? <a href="signin.html" class="link">Signin Instead</a></p>
                 </form>
-                <p>Go back home <a href="index.html" class="link">Home</a></p> 
-            </div>       
+                <p>Go back home <a href="index.html" class="link">Home</a></p>
+            </div>
         </div>
 
     </div>
-    
+
+    <script src="./src/signupCtrl.js"></script>
+    <script src="./src/tokenExist.js"></script>
 </body>
+
 </html>
